Fixed stretched logo

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -126,8 +126,8 @@ video {
 }
 
 nav .logo {
-  width: 120px;
-  padding: 10px;
+  width: 110px;
+  margin: 10px;
 }
 
 #title .logo {
